fixed the text overlap within the calendar months

--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,10 @@ input, textarea {
     font-family: 'Merriweather', serif;
 }
 
+.datepicker-controls .select-month input {
+    width: 90px;
+}
+
 .datepicker-date-display {
     background-color: #ff8f00;
 }
